add mobile menu in landing page

--- a/index.html
+++ b/index.html
@@ -45,8 +45,19 @@
                     <span id="cart-count" style="position: absolute; top: -8px; right: -8px; background: var(--color-forest); color: white; border-radius: 50%; width: 20px; height: 20px; display: flex; align-items: center; justify-content: center; font-size: 12px; font-weight: 600;">0</span>
                 </a>
             </nav>
+            <button class="mobile-toggle" aria-label="Toggle navigation">
+                <i data-lucide="menu" width="24" height="24"></i>
+            </button>
         </div>
     </header>
+
+    <div class="mobile-menu">
+        <a href="about.html">Our Story</a>
+        <a href="products.html">Shop</a>
+        <a href="transparency.html">Transparency</a>
+        <a href="contact.html">Contact</a>
+        <a href="#" class="cart-link">Cart (<span class="cart-count">0</span>)</a>
+    </div>
 
     <!-- ... -->
 
