--- a/landing.html
+++ b/landing.html
@@ -1007,7 +1007,7 @@
                 </div>
                 <div class="transparency-item">
                     <div class="check-icon"><i data-lucide="check" width="20" height="20"></i></div>
-                    <div><strong>Ethically Sourced:</strong> From women's cooperatives in Senegal.</div>
+                    <div><strong>Ethically Sourced:</strong> From women's cooperatives in Kitui.</div>
                 </div>
                 <div class="transparency-item">
                     <div class="check-icon"><i data-lucide="check" width="20" height="20"></i></div>
