feat: Add new product and blog pages, introduce a client-side script, update general site content and Google Analytics, and remove deprecated pages.

--- a/products/tallow-balm.html
+++ b/products/tallow-balm.html
@@ -63,7 +63,7 @@
                 <a href="../about.html">Our Story</a>
                 <a href="../products.html">Shop</a>
                 <a href="../ingredients.html">Ingredients</a>
-                <a href="../transparency.html">Transparency</a>
+                
                 <a href="../contact.html">Contact</a>
                 <a href="#" class="cart-link">
                     <i data-lucide="shopping-cart" width="24" height="24"></i>
@@ -84,7 +84,7 @@
         <a href="../about.html">Our Story</a>
         <a href="../products.html">Shop</a>
         <a href="../ingredients.html">Ingredients</a>
-        <a href="../transparency.html">Transparency</a>
+        
         <a href="../faq.html">FAQ</a>
         <a href="../contact.html">Contact</a>
     </nav>
@@ -231,7 +231,7 @@
                     <ul class="footer-links">
                         <li><a href="../about.html">Our Story</a></li>
                         <li><a href="../ingredients.html">Ingredients</a></li>
-                        <li><a href="../transparency.html">Transparency</a></li>
+                        <li></li>
                         <li><a href="../faq.html">FAQ</a></li>
                     </ul>
                 </div>
@@ -243,7 +243,7 @@
                             <i data-lucide="map-pin" width="18"></i> Nairobi, Kenya
                         </li>
                         <li class="footer-contact-item">
-                            <i data-lucide="mail" width="18"></i> hello@cocomac.co.ke
+                            <i data-lucide="mail" width="18"></i> cocomacrganics@gmail.com
                         </li>
                         <li class="footer-contact-item">
                             <i data-lucide="phone" width="18"></i> +254 780 980 201
