--- a/about.html
+++ b/about.html
@@ -22,12 +22,12 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4LJ19JBDRT"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX');
+        gtag('config', 'G-4LJ19JBDRT');
     </script>
 </head>
 <body>
@@ -51,7 +51,7 @@
                 <a href="about.html">Our Story</a>
                 <a href="products.html">Shop</a>
                 <a href="ingredients.html">Ingredients</a>
-                <a href="transparency.html">Transparency</a>
+                
                 <a href="contact.html">Contact</a>
                 <a href="#" class="cart-link">
                     <i data-lucide="shopping-cart" width="24" height="24"></i>
@@ -76,7 +76,7 @@
         <a href="about.html">Our Story</a>
         <a href="products.html">Shop</a>
         <a href="ingredients.html">Ingredients</a>
-        <a href="transparency.html">Transparency</a>
+        
         <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
         <a href="#" class="cart-link" style="display: flex; align-items: center; gap: 8px;">
@@ -171,7 +171,7 @@
                 </div>
                 <div class="transparency-item">
                     <div class="check-icon"><i data-lucide="check" width="20" height="20"></i></div>
-                    <div><strong>KEBS Certified:</strong> All products meet Kenya Bureau of Standards requirements.</div>
+                    <div><strong>Quality Focused:</strong> Made in small batches with careful attention to purity and consistency.</div>
                 </div>
             </div>
 
@@ -211,7 +211,7 @@
                     <ul class="footer-links">
                         <li><a href="about.html">Our Story</a></li>
                         <li><a href="ingredients.html">Ingredients</a></li>
-                        <li><a href="transparency.html">Transparency</a></li>
+                        <li></li>
                         <li><a href="faq.html">FAQ</a></li>
                     </ul>
                 </div>
@@ -223,7 +223,7 @@
                             <i data-lucide="map-pin" width="18"></i> Nairobi, Kenya
                         </li>
                         <li class="footer-contact-item">
-                            <i data-lucide="mail" width="18"></i> hello@cocomac.co.ke
+                            <i data-lucide="mail" width="18"></i> cocomacrganics@gmail.com
                         </li>
                         <li class="footer-contact-item">
                             <i data-lucide="phone" width="18"></i> +254 780 980 201
