--- a/contact.html
+++ b/contact.html
@@ -23,12 +23,12 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4LJ19JBDRT"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX');
+        gtag('config', 'G-4LJ19JBDRT');
     </script>
 </head>
 <body>
@@ -52,7 +52,7 @@
                 <a href="about.html">Our Story</a>
                 <a href="products.html">Shop</a>
                 <a href="ingredients.html">Ingredients</a>
-                <a href="transparency.html">Transparency</a>
+                
                 <a href="contact.html">Contact</a>
                 <a href="#" class="cart-link">
                     <i data-lucide="shopping-cart" width="24" height="24"></i>
@@ -77,7 +77,7 @@
         <a href="about.html">Our Story</a>
         <a href="products.html">Shop</a>
         <a href="ingredients.html">Ingredients</a>
-        <a href="transparency.html">Transparency</a>
+        
         <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
         <a href="#" class="cart-link" style="display: flex; align-items: center; gap: 8px;">
@@ -152,7 +152,7 @@
                 <div class="prop-card">
                     <div style="color: var(--color-forest); margin-bottom: 16px;"><i data-lucide="phone" width="40" height="40"></i></div>
                     <h3>Contact</h3>
-                    <p>Phone: +254 780 980 201<br>Email: hello@cocomac.co.ke</p>
+                    <p>Phone: +254 780 980 201<br>Email: cocomacrganics@gmail.com</p>
                 </div>
                 <div class="prop-card">
                     <div style="color: var(--color-forest); margin-bottom: 16px;"><i data-lucide="users" width="40" height="40"></i></div>
@@ -227,7 +227,7 @@
                     <ul class="footer-links">
                         <li><a href="about.html">Our Story</a></li>
                         <li><a href="ingredients.html">Ingredients</a></li>
-                        <li><a href="transparency.html">Transparency</a></li>
+                        <li></li>
                         <li><a href="faq.html">FAQ</a></li>
                     </ul>
                 </div>
@@ -239,7 +239,7 @@
                             <i data-lucide="map-pin" width="18"></i> Nairobi, Kenya
                         </li>
                         <li class="footer-contact-item">
-                            <i data-lucide="mail" width="18"></i> hello@cocomac.co.ke
+                            <i data-lucide="mail" width="18"></i> cocomacrganics@gmail.com
                         </li>
                         <li class="footer-contact-item">
                             <i data-lucide="phone" width="18"></i> +254 780 980 201
