--- a/ingredients.html
+++ b/ingredients.html
@@ -22,12 +22,12 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4LJ19JBDRT"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX');
+        gtag('config', 'G-4LJ19JBDRT');
     </script>
 </head>
 <body>
@@ -51,7 +51,7 @@
                 <a href="about.html">Our Story</a>
                 <a href="products.html">Shop</a>
                 <a href="ingredients.html" style="color: var(--color-forest);">Ingredients</a>
-                <a href="transparency.html">Transparency</a>
+                
                 <a href="contact.html">Contact</a>
                 <a href="#" class="cart-link">
                     <i data-lucide="shopping-cart" width="24" height="24"></i>
@@ -77,7 +77,7 @@
         <a href="about.html">Our Story</a>
         <a href="products.html">Shop</a>
         <a href="ingredients.html">Ingredients</a>
-        <a href="transparency.html">Transparency</a>
+        
         <a href="learn.html">Learn</a>
         <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
@@ -119,7 +119,7 @@
                         </div>
                         <div style="margin-top: 16px;">
                             <p style="font-size: 13px; color: var(--color-charcoal);"><strong>Traditional Use:</strong> Used for centuries across Africa for skin healing and hair care.</p>
-                            <p style="font-size: 13px; color: var(--color-charcoal);"><strong>Source:</strong> Kenyan communities, fair trade certified.</p>
+                            <p style="font-size: 13px; color: var(--color-charcoal);"><strong>Source:</strong> Kenyan communities, ethically sourced.</p>
                         </div>
                     </div>
                 </article>
@@ -162,8 +162,8 @@
                             <p style="margin: 0; font-size: 14px;">Anti-inflammatory, deeply moisturizing. Protects against environmental damage and soothes irritated skin.</p>
                         </div>
                         <div style="margin-top: 16px;">
-                            <p style="font-size: 13px; color: var(--color-charcoal);"><strong>Traditional Use:</strong> Known as "women's gold" in West Africa for its healing properties.</p>
-                            <p style="font-size: 13px; color: var(--color-charcoal);"><strong>Source:</strong> Women's cooperatives, fair trade premium.</p>
+                            <p style="font-size: 13px; color: var(--color-charcoal);"><strong>Traditional Use:</strong> Known as "women's gold" in Africa for its healing properties.</p>
+                            <p style="font-size: 13px; color: var(--color-charcoal);"><strong>Source:</strong> Women's cooperatives in Uganda, ethically sourced.</p>
                         </div>
                     </div>
                 </article>
@@ -308,7 +308,7 @@
                     <ul class="footer-links">
                         <li><a href="about.html">Our Story</a></li>
                         <li><a href="ingredients.html">Ingredients</a></li>
-                        <li><a href="transparency.html">Transparency</a></li>
+                        <li></li>
                         <li><a href="faq.html">FAQ</a></li>
                     </ul>
                 </div>
@@ -320,7 +320,7 @@
                             <i data-lucide="map-pin" width="18"></i> Nairobi, Kenya
                         </li>
                         <li class="footer-contact-item">
-                            <i data-lucide="mail" width="18"></i> hello@cocomac.co.ke
+                            <i data-lucide="mail" width="18"></i> cocomacrganics@gmail.com
                         </li>
                         <li class="footer-contact-item">
                             <i data-lucide="phone" width="18"></i> +254 780 980 201
