docs: Update delivery fee calculation methods and free shipping threshold on contact and FAQ pages.

--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,7 @@
                     
                     <div style="margin-bottom: 32px; padding: 24px; background: var(--color-white); border-radius: var(--border-radius);">
                         <h4 style="color: var(--color-forest); margin-bottom: 12px;">How long does delivery take?</h4>
-                        <p style="margin-bottom: 0;">Nairobi: Same-day or next-day delivery. Rest of Kenya: 2-4 business days. We'll confirm the timeline when you place your order.</p>
+                        <p style="margin-bottom: 0;">Nairobi: Same-day or next-day delivery. Rest of Kenya: 2-4 business days. Delivery fees are calculated based on your exact location using standard rider rates.</p>
                     </div>
                     
                     <div style="margin-bottom: 32px; padding: 24px; background: var(--color-white); border-radius: var(--border-radius);">
