--- a/faq.html
+++ b/faq.html
@@ -262,9 +262,9 @@
                         <i data-lucide="chevron-down" width="20"></i>
                     </div>
                     <div class="faq-answer">
-                        <p><strong>Nairobi:</strong> KES 200-350, delivered within 1-2 business days.<br>
-                        <strong>Other Major Towns:</strong> KES 350-500, delivered within 2-4 business days.<br>
-                        <strong>Free Shipping:</strong> Orders over KES 4,000 qualify for free delivery within Nairobi.</p>
+                        <p><strong>Nairobi:</strong> Delivery fees are calculated based on your exact location using standard rider rates. We will confirm the cost via WhatsApp when you order.<br>
+                        <strong>Other Major Towns:</strong> Delivery via courier (e.g. Wells Fargo/G4S). Cost varies by town.<br>
+                        <strong>Free Shipping:</strong> Orders over KES 5,000 qualify for free delivery within Nairobi.</p>
                     </div>
                 </div>
 
