feat: Add new blog post on understanding the skin barrier, a dedicated product page for tallow balm, and enhance email links across the site.

--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
                             <i data-lucide="map-pin" width="18"></i> Nairobi, Kenya
                         </li>
                         <li class="footer-contact-item">
-                            <i data-lucide="mail" width="18"></i> cocomacrganics@gmail.com
+                            <i data-lucide="mail" width="18"></i> <a href="mailto:cocomacrganics@gmail.com" style="color: inherit; text-decoration: none;">cocomacrganics@gmail.com</a>
                         </li>
                         <li class="footer-contact-item">
                             <i data-lucide="phone" width="18"></i> +254 780 980 201
