--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
                 <div class="prop-card">
                     <div style="color: var(--color-forest); margin-bottom: 16px;"><i data-lucide="phone" width="40" height="40"></i></div>
                     <h3>Contact</h3>
-                    <p>Phone: +254 780 980 201<br>Email: cocomacrganics@gmail.com</p>
+                    <p>Phone: +254 780 980 201<br>Email: <a href="mailto:cocomacrganics@gmail.com" style="color: var(--color-forest);">cocomacrganics@gmail.com</a></p>
                 </div>
                 <div class="prop-card">
                     <div style="color: var(--color-forest); margin-bottom: 16px;"><i data-lucide="users" width="40" height="40"></i></div>
@@ -239,7 +239,7 @@
                             <i data-lucide="map-pin" width="18"></i> Nairobi, Kenya
                         </li>
                         <li class="footer-contact-item">
-                            <i data-lucide="mail" width="18"></i> cocomacrganics@gmail.com
+                            <i data-lucide="mail" width="18"></i> <a href="mailto:cocomacrganics@gmail.com" style="color: inherit; text-decoration: none;">cocomacrganics@gmail.com</a>
                         </li>
                         <li class="footer-contact-item">
                             <i data-lucide="phone" width="18"></i> +254 780 980 201
