--- a/faq.html
+++ b/faq.html
@@ -319,7 +319,7 @@
                         <i data-lucide="chevron-down" width="20"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Yes! Email us at cocomacrganics@gmail.com with any questions about your product, its ingredients, or how it was made. We're happy to share details about our sourcing and production process.</p>
+                        <p>Yes! Email us at <a href="mailto:cocomacrganics@gmail.com" style="color: var(--color-forest);">cocomacrganics@gmail.com</a> with any questions about your product, its ingredients, or how it was made. We're happy to share details about our sourcing and production process.</p>
                     </div>
                 </div>
             </div>
@@ -384,7 +384,7 @@
                             <i data-lucide="map-pin" width="18"></i> Nairobi, Kenya
                         </li>
                         <li class="footer-contact-item">
-                            <i data-lucide="mail" width="18"></i> cocomacrganics@gmail.com
+                            <i data-lucide="mail" width="18"></i> <a href="mailto:cocomacrganics@gmail.com" style="color: inherit; text-decoration: none;">cocomacrganics@gmail.com</a>
                         </li>
                         <li class="footer-contact-item">
                             <i data-lucide="phone" width="18"></i> +254 780 980 201
