feat: Add blog link to the navigation bar across all website pages.

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                 <a href="about.html">Our Story</a>
                 <a href="products.html">Shop</a>
                 <a href="ingredients.html">Ingredients</a>
-                
+                <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact</a>
                 <a href="#" class="cart-link">
                     <i data-lucide="shopping-cart" width="24" height="24"></i>
@@ -76,7 +76,7 @@
         <a href="about.html">Our Story</a>
         <a href="products.html">Shop</a>
         <a href="ingredients.html">Ingredients</a>
-        
+        <a href="blog.html">Blog</a>
         <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
         <a href="#" class="cart-link" style="display: flex; align-items: center; gap: 8px;">
