--- a/faq.html
+++ b/faq.html
@@ -102,7 +102,7 @@
                 <a href="about.html">Our Story</a>
                 <a href="products.html">Shop</a>
                 <a href="ingredients.html">Ingredients</a>
-                
+                <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact</a>
                 <a href="#" class="cart-link">
                     <i data-lucide="shopping-cart" width="24" height="24"></i>
@@ -128,7 +128,7 @@
         <a href="about.html">Our Story</a>
         <a href="products.html">Shop</a>
         <a href="ingredients.html">Ingredients</a>
-        
+        <a href="blog.html">Blog</a>
         <a href="learn.html">Learn</a>
         <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
