--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <nav class="desktop-nav" aria-label="Main navigation">
                 <a href="about.html">Our Story</a>
                 <a href="products.html">Shop</a>
-                
+                <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact</a>
                 <a href="#" class="cart-link" style="position: relative; margin-right: 16px;">
                     <i data-lucide="shopping-cart" width="24" height="24"></i>
@@ -70,7 +70,7 @@
         <a href="about.html">Our Story</a>
         <a href="products.html">Shop</a>
         <a href="ingredients.html">Ingredients</a>
-        
+        <a href="blog.html">Blog</a>
         <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
         <a href="#" class="cart-link" style="display: flex; align-items: center; gap: 8px;">
