--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <a href="about.html">Our Story</a>
                 <a href="products.html">Shop</a>
                 <a href="ingredients.html">Ingredients</a>
-                
+                <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact</a>
                 <a href="#" class="cart-link">
                     <i data-lucide="shopping-cart" width="24" height="24"></i>
@@ -77,7 +77,7 @@
         <a href="about.html">Our Story</a>
         <a href="products.html">Shop</a>
         <a href="ingredients.html">Ingredients</a>
-        
+        <a href="blog.html">Blog</a>
         <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
         <a href="#" class="cart-link" style="display: flex; align-items: center; gap: 8px;">
