--- a/ingredients.html
+++ b/ingredients.html
@@ -51,7 +51,7 @@
                 <a href="about.html">Our Story</a>
                 <a href="products.html">Shop</a>
                 <a href="ingredients.html" style="color: var(--color-forest);">Ingredients</a>
-                
+                <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact</a>
                 <a href="#" class="cart-link">
                     <i data-lucide="shopping-cart" width="24" height="24"></i>
@@ -77,7 +77,7 @@
         <a href="about.html">Our Story</a>
         <a href="products.html">Shop</a>
         <a href="ingredients.html">Ingredients</a>
-        
+        <a href="blog.html">Blog</a>
         <a href="learn.html">Learn</a>
         <a href="faq.html">FAQ</a>
         <a href="contact.html">Contact</a>
